about og andre sider

--- a/src/components/ContactUs.astro
+++ b/src/components/ContactUs.astro
@@ -21,7 +21,7 @@ import ContactInfo from "./ContactInfo.astro";
   </div>
 
   <div class="del2">
-    <figure>
+    <figure class="figure-version1">
       <div class="billede-grid">
         <Image alt="" src={home2} />
         <div>
