--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -44,7 +44,7 @@
       position: relative;
       isolation: isolate;
 
-      margin-bottom: 4rem;
+      margin: 4rem 0;
 
       &::before {
         --square-count: 12;
