--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import ContactUs from "../components/ContactUs.astro";
 
   <Experience />
 
-  <CorevaluesSection data={corevalueData} tagProps={{ style: "tertiary" }} buttonProps1={{ style: "secondary" }} buttonProps2={{ style: "primary" }}>Growing with our Clients</CorevaluesSection>
+  <CorevaluesSection data={corevalueData} background="black" tagProps={{ style: "tertiary" }} buttonProps1={{ style: "secondary" }} buttonProps2={{ style: "primary" }}>Growing with our Clients</CorevaluesSection>
 
   <ContactUs />
 </MainLayout>
