--- a/src/components/AboutSection1.astro
+++ b/src/components/AboutSection1.astro
@@ -1,27 +1,25 @@
 ---
 import { Image } from "astro:assets";
-import home1 from "../assets/home1.jpg";
+import about2 from "../assets/about2.jpg";
 import Tag from "./Tag.astro";
-
-const { imageProps, h2, tekst, tagProps, li1, li2, order } = Astro.props;
 ---
 
 <section class="container">
   <div class="del1">
-    <figure class="figure-version2">
-      <Image alt="" src={home1} />
-    </figure>
-  </div>
-  <div class="del2">
     <div>
-      <Tag {...tagProps}><slot /></Tag>
-      <h2>{h2}</h2>
-      <p>{tekst}</p>
+      <Tag style="primary">OUR VISION</Tag>
+      <h2>Turn your ideas into reality.</h2>
+      <p>Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps.</p>
     </div>
     <ul>
-      <li>{li1}</li>
-      <li>{li2}</li>
+      <li>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day.</li>
+      <li>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day.</li>
     </ul>
+  </div>
+  <div class="del2">
+    <figure class="figure-version3">
+      <Image alt="" src={about2} />
+    </figure>
   </div>
 </section>
 
@@ -35,24 +33,13 @@ const { imageProps, h2, tekst, tagProps, li1, li2, order } = Astro.props;
       gap: 2rem;
       color: var(--color-primary3);
       padding: 5rem 0;
+
       @media (width < 600px) {
         display: block;
       }
 
       .del1 {
         grid-column: 2 / 3;
-        grid-row: 2 / 3;
-        display: grid;
-        grid-template-columns: subgrid;
-      }
-      /* img {
-        display: grid;
-        grid-template-columns: subgrid;
-        grid-column: 2 / 3;
-        grid-row: 2 / 3;
-      } */
-      .del2 {
-        grid-column: 3;
         grid-row: 1 / 3;
 
         div {
@@ -80,6 +67,12 @@ const { imageProps, h2, tekst, tagProps, li1, li2, order } = Astro.props;
             }
           }
         }
+      }
+      .del2 {
+        grid-column: 3;
+        grid-row: 1 / 3;
+        display: grid;
+        grid-template-columns: subgrid;
       }
     }
 
