--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -14,10 +14,6 @@ const { style, linket } = Astro.props;
       align-self: start;
     }
 
-    a:hover {
-      transform: scale(1.04);
-    }
-
     .primary {
       background: var(--color-primary3);
       color: var(--color-secondary2);
@@ -34,8 +30,8 @@ const { style, linket } = Astro.props;
       color: var(--color-primary3);
     }
     .secondary:hover {
-      background: var(--color-primary3);
-      color: var(--color-secondary2);
+      background: var(--color-secondary2);
+      color: var(--color-primary3);
       text-decoration: none;
     }
   }
