--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -32,43 +32,7 @@ const firstthreeemplloyees = employeeData.slice(0, 3);
 
   <AboutEmpolyee data={firstthreeemplloyees} />
 
-  <!-- 
-
-  <section class="core">
-    <Tag style="secondary">Growing with our Clients</Tag>
-
-    <CorevaluesSection data={corevalueData} buttonProps1={{ style: "secondary" }} buttonProps2={{ style: "primary" }} />
-  </section>
-
-  <section class="team">
-    <p class="faq">Our team</p>
-    <h2>We champion the bold to achieve the extraordinary</h2>
-    <p>Ippsum is the result of synergy between our teams and our customers. Our company culture is focused on excellent productivity, customer satisfaction, respect for team.</p>
-    <EmployeeSection data={employeeData} />
-  </section>
-  <section>
-    <article class="accordion">
-      <div class="overskrift-tag">
-        <Tag style="primary">FAQ</Tag>
-        <h2>Customer Questions</h2>
-      </div>
-      <div class="accordion-container">
-        <Accordion overskrift1="What will happen when I’ve sent my application?" />
-
-        <Accordion overskrift1="Can I get a free trial before I purchase?">
-          <p>Ippsum is the result of synergy between our teams and our customers. Our company culture is focused on excellent productivity, customer satisfaction, respect for team and individual achievements.</p>
-        </Accordion>
-
-        <Accordion overskrift1="What should I include in my personal statement?" />
-
-        <Accordion overskrift1="Will membership plans be charged automatically?" />
-
-        <Accordion overskrift1="What will happen when I’ve sent my application?" />
-
-        <Accordion overskrift1="Can I get a free trial before I purchase?" />
-      </div>
-    </article>
-  </section> -->
+  <Accordion />
 </MainLayout>
 <style>
   .team {
@@ -79,10 +43,6 @@ const firstthreeemplloyees = employeeData.slice(0, 3);
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .core {
-    color: var(--color-primary3);
-    background: var(--color-secondary1);
-  }
   .accordion {
     display: flex;
     flex-direction: column;
