--- a/src/components/AboutSection1.astro
+++ b/src/components/AboutSection1.astro
@@ -33,9 +33,9 @@ import Tag from "./Tag.astro";
       gap: 2rem;
       color: var(--color-primary3);
       padding: 5rem 0;
-
       @media (width < 600px) {
         display: block;
+        padding: 1rem 0;
       }
 
       .del1 {
