--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -11,6 +11,7 @@ const { style, place } = Astro.props;
       border-radius: 20px;
       align-self: start;
       justify-content: start;
+      text-transform: uppercase;
     }
     .primary {
       background: var(--color-primary2);
