--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,6 +53,7 @@
     --content: min(75rem, 100% - var(--gap) * 2);
 
     --layout-grid2: [full-start] 1fr [content] minmax(0, 600px) minmax(0, 600px) 1fr [full-end];
+    --layout-rows2: 1fr auto auto;
   }
 
   body {
