--- a/src/components/AndenSection.astro
+++ b/src/components/AndenSection.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import home1 from "../assets/home1.jpg";
 import Tag from "./Tag.astro";
 
-const { imageProps, h2, tekst, tagProps, li1, li2, order } = Astro.props;
+const { h2, tekst, tagProps, li1, li2 } = Astro.props;
 ---
 
 <section class="container">
@@ -30,8 +30,8 @@ const { imageProps, h2, tekst, tagProps, li1, li2, order } = Astro.props;
     .container {
       grid-column: full;
       display: grid;
-      grid-template-columns: [full-start] 1fr [content] minmax(0, 600px) minmax(0, 600px) 1fr [full-end];
-      grid-template-rows: 1fr auto auto;
+      grid-template-columns: var(--layout-grid2);
+      grid-template-rows: var(--layout-rows2);
       gap: 2rem;
       color: var(--color-primary3);
       padding: 5rem 0;
@@ -45,12 +45,6 @@ const { imageProps, h2, tekst, tagProps, li1, li2, order } = Astro.props;
         display: grid;
         grid-template-columns: subgrid;
       }
-      /* img {
-        display: grid;
-        grid-template-columns: subgrid;
-        grid-column: 2 / 3;
-        grid-row: 2 / 3;
-      } */
       .del2 {
         grid-column: 3;
         grid-row: 1 / 3;
@@ -70,7 +64,7 @@ const { imageProps, h2, tekst, tagProps, li1, li2, order } = Astro.props;
             align-items: center;
             gap: 1rem;
             font-size: 1rem;
-            color: #595566;
+            color: var(--color-text);
             max-width: 65ch;
             &:before {
               content: "";
