--- a/src/components/CorevaluesSection.astro
+++ b/src/components/CorevaluesSection.astro
@@ -4,18 +4,19 @@ import Tag from "./Tag.astro";
 import { Icon } from "astro-icon/components";
 
 const { data } = Astro.props;
-const { buttonProps1, tagProps, background } = Astro.props;
-const { title, subtitle, button, values, text } = data;
+const { buttonProps1, background } = Astro.props;
+const { title, subtitle, button, values } = data;
 ---
 
-<section class={background}>
+<section class={`${background} container`}>
   <div class="del1">
-    <Tag {...tagProps}><slot /></Tag>
-    <h2>{title}</h2>
-    <div class="teksten">
+    <div class="text">
+      <Tag style="tertiary">Growing with our Clients</Tag>
+      <h2>{title}</h2>
+
       <p>{subtitle}</p>
-      <Button {...buttonProps1} linket={button.link}>{button.text}</Button>
     </div>
+    <Button class="knap" {...buttonProps1} linket={button.link}>{button.text}</Button>
   </div>
 
   <ul role="list" class="del2">
@@ -35,15 +36,16 @@ const { title, subtitle, button, values, text } = data;
 
 <style>
   @layer components {
-    section {
-      grid-column: 1 / -1;
+    .container {
+      grid-column: full;
       display: grid;
-      grid-template-columns: inherit;
+      grid-template-columns: var(--layout-grid2);
+      grid-template-rows: var(--layout-rows2);
       row-gap: 2rem;
-
       padding: 5rem 0;
       @media (width < 600px) {
-        display: block;
+        /* display: block; */
+        padding-inline: 1rem;
       }
       > * {
         grid-column: 2;
@@ -59,31 +61,45 @@ const { title, subtitle, button, values, text } = data;
           scroll-snap-align: center;
           &:first-child {
             margin-left: calc(50% - var(--content) / 2);
+            @media (width < 600px) {
+              margin-left: 0px;
+            }
           }
 
           &:last-child {
             margin-right: calc(50% - var(--content) / 2);
+            @media (width < 600px) {
+              margin-right: 0px;
+            }
           }
         }
       }
       .del1 {
         display: flex;
-        flex-direction: column;
+        grid-column: 2 / 4;
+        justify-content: space-between;
+        @media (width < 600px) {
+          flex-direction: column;
+          align-items: start;
+        }
+
         .text {
+          display: flex;
+          flex-direction: column;
           max-width: 50%;
+          @media (width < 600px) {
+            max-width: none;
+          }
           .icon {
             width: 100px;
           }
         }
-        .teksten {
-          display: flex;
-          justify-content: space-between;
 
-          @media (width < 600px) {
-            flex-direction: column;
-          }
+        .knap {
+          align-self: end;
         }
       }
+
       .del2 {
         display: flex;
         justify-content: space-between;
@@ -99,14 +115,18 @@ const { title, subtitle, button, values, text } = data;
         li {
           flex-basis: min(272px, 90%);
           flex-shrink: 0;
-          background: #ebebeb;
-          color: #595566;
+          background: var(--color-card);
+          color: var(--color-text);
           border-radius: 8px;
           font-size: 1rem;
-          padding: 2.75rem 2.1875rem;
+          padding: 2.25rem 1.44rem;
           align-self: start;
           display: grid;
           gap: 10px;
+
+          @media (width < 600px) {
+            flex-basis: none;
+          }
           h6 {
             font-weight: 700;
             font-size: 1.5625rem;
