--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -38,6 +38,7 @@ import Card from "./Card.astro";
         grid-row: 1 / 3;
         display: grid;
         grid-template-columns: subgrid;
+        padding: 5rem 0;
 
         background: var(--color-primary3);
         color: var(--color-secondary2);
