--- a/src/components/ScrollingContainer.astro
+++ b/src/components/ScrollingContainer.astro
@@ -3,8 +3,8 @@ const { cardContent } = Astro.props;
 import { Icon } from "astro-icon/components";
 ---
 
-<section class="scrolling">
-  <div class="scrolling-top">
+<section class="container">
+  <div class="del1">
     <div class="text">
       <div class="icon">
         <Icon name="financial-projections" />
@@ -18,7 +18,7 @@ import { Icon } from "astro-icon/components";
     </div>
   </div>
 
-  <ul role="list" class="full-width">
+  <ul role="list" class="del2">
     {
       cardContent.map((card) => (
         <li>
@@ -35,14 +35,19 @@ import { Icon } from "astro-icon/components";
 
 <style>
   @layer components {
-    .scrolling {
-      grid-column: 1 / -1;
+    .container {
+      grid-column: full;
       display: grid;
-      grid-template-columns: inherit;
+      grid-template-columns: var(--layout-grid2);
+      grid-template-rows: var(--layout-rows2);
       row-gap: 4rem;
+      padding: 5rem 0;
+
       background: var(--color-secondary1);
       color: var(--color-primary3);
-
+      @media (width < 600px) {
+        padding-inline: 1rem;
+      }
       > * {
         grid-column: 2;
       }
@@ -57,19 +62,34 @@ import { Icon } from "astro-icon/components";
           scroll-snap-align: center;
           &:first-child {
             margin-left: calc(50% - var(--content) / 2);
+            @media (width < 600px) {
+              margin-left: 0px;
+            }
           }
           &:last-child {
             margin-right: calc(50% - var(--content) / 2);
+            @media (width < 600px) {
+              margin-right: 0px;
+            }
           }
         }
       }
 
-      .scrolling-top {
+      .del1 {
+        grid-column: 2 / 4;
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
+        @media (width < 600px) {
+          flex-direction: column;
+          align-items: start;
+        }
+
         .text {
           max-width: 50%;
+          @media (width < 600px) {
+            max-width: none;
+          }
           .icon {
             width: 100px;
           }
@@ -95,7 +115,7 @@ import { Icon } from "astro-icon/components";
       }
     }
 
-    .full-width {
+    .del2 {
       display: flex;
       gap: 1rem;
       overflow-x: auto;
@@ -105,10 +125,9 @@ import { Icon } from "astro-icon/components";
       li {
         flex-basis: min(400px, 90%);
         flex-shrink: 0;
-        background: #ebebeb;
-        color: #595566;
+        background: var(--color-card);
+        color: var(--color-text);
         border-radius: 8px;
-        font-size: 1rem;
         padding: 2.75rem 2.1875rem;
         align-self: start;
         display: grid;
@@ -121,40 +140,16 @@ import { Icon } from "astro-icon/components";
       .icon-card {
         width: 40px;
         margin-bottom: 14px;
-      }
-
-      /* ul {
-      display: flex;
-      gap: 1rem;
-      overflow-x: auto;
-
-      li {
-        flex-basis: min(400px, 90%);
-        flex-shrink: 0;
-        background: var(--color-card);
-        color: var(--color-text);
-        border-radius: 8px;
-        padding: 2.75rem 2.1875rem;
-        align-self: start;
-        &:hover {
-          background: var(--color-primary3);
-          color: var(--color-secondary2);
-        }
-        h2 {
-          font-weight: 700;
-          color: var(--color-primary3);
+        img {
+          border-radius: 0px;
         }
       }
-      img {
-        width: 10%;
-      }
-    } */
     }
   }
 </style>
 <script>
   document.addEventListener("DOMContentLoaded", () => {
-    const container = document.querySelector(".scrolling ul");
+    const container = document.querySelector(".container ul");
     const leftButton = document.getElementById("scroll-left");
     const rightButton = document.getElementById("scroll-right");
 
