--- a/src/components/AboutSection2.astro
+++ b/src/components/AboutSection2.astro
@@ -28,7 +28,7 @@
     .container {
       grid-column: full;
       display: grid;
-      grid-template-rows: 1fr auto auto;
+      grid-template-rows: var(--layout-rows2);
       gap: 2rem;
       color: var(--color-primary3);
       @media (width < 600px) {
