--- a/src/components/CaseStudy1.astro
+++ b/src/components/CaseStudy1.astro
@@ -29,7 +29,7 @@ import Button from "./Button.astro";
       grid-column: full;
       display: grid;
       grid-template-columns: var(--layout-grid2);
-      grid-template-rows: 1fr auto auto;
+      grid-template-rows: var(--layout-rows2);
       color: var(--color-primary3);
       padding: 5rem 0;
 
