--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -43,7 +43,7 @@ import Tag from "./Tag.astro";
       grid-column: full;
       display: grid;
       grid-template-columns: var(--layout-grid2);
-      grid-template-rows: 1fr auto auto;
+      grid-template-rows: var(--layout-rows2);
       background: var(--color-primary1);
       color: var(--color-primary3);
       padding: 5rem 0;
