--- a/src/components/ContactUs.astro
+++ b/src/components/ContactUs.astro
@@ -38,8 +38,8 @@ import ContactInfo from "./ContactInfo.astro";
     .container {
       grid-column: full;
       display: grid;
-      grid-template-columns: [full-start] 1fr [content] minmax(0, 600px) minmax(0, 600px) 1fr [full-end];
-      grid-template-rows: 1fr auto auto;
+      grid-template-columns: var(--layout-grid2);
+      grid-template-rows: var(--layout-rows2);
 
       color: var(--color-primary3);
       padding: 5rem 0;
