--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -28,8 +28,8 @@ import Card from "./Card.astro";
     .container {
       grid-column: full;
       display: grid;
-      grid-template-columns: [full-start] 1fr [content] minmax(0, 600px) minmax(0, 600px) 1fr [full-end];
-      grid-template-rows: 1fr auto auto;
+      grid-template-columns: var(--layout-grid2);
+      grid-template-rows: var(--layout-rows2);
       max-height: 90vh;
       overflow: hidden;
 
