--- a/src/components/Popover.astro
+++ b/src/components/Popover.astro
@@ -16,78 +16,80 @@ import Button from "./Button.astro";
 </div>
 
 <style>
-  [popover]::backdrop {
-    background: #0004;
-    backdrop-filter: blur(16px);
-  }
-
-  .loginbtn {
-    background: var(--color-primary1);
-    color: var(--color-primary3);
-    display: inline-block;
-    padding: 16px 37px;
-    transition: all 0.55s ease;
-    border-radius: 42px;
-    align-self: start;
-
-    border: 2px solid transparent;
-    cursor: pointer;
-    transition:
-      background-color 0.3s ease,
-      color 0.3s ease,
-      border-color 0.3s ease;
-  }
-
-  .submit {
-    background-color: var(--color-primary1);
-    display: inline-block;
-    padding: 16px 37px;
-    transition: all 0.55s ease;
-    border-radius: 42px;
-    background: var(--color-primary1);
-    color: var(--color-primary3);
-  }
-  label {
-    display: flex;
-    width: 382px;
-    padding: 24px 33px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-    border-radius: 54px;
-    border: 1px solid #e3e3e3;
-    background: var(--color-secondary2);
-  }
-
-  input {
-    border-radius: 100px;
-    background: var(--color-secondary2);
-    padding: 18px;
-    z-index: 10;
-  }
-
-  #popup {
-    min-width: 750px;
-    padding: 40px 60px 60px 60px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 10px;
-    background: rgba(0, 0, 0, 0.5);
-    margin: auto;
-    border-radius: 29px;
-    &:popover-open {
-      display: flex;
+  @layer components {
+    [popover]::backdrop {
+      background: #0004;
+      backdrop-filter: blur(16px);
     }
 
-    h4 {
-      color: var(--color-secondary2);
-      text-align: center;
-      font-family: Cabin;
-      font-size: 45px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 116%; /* 52.2px */
+    .loginbtn {
+      background: var(--color-primary1);
+      color: var(--color-primary3);
+      display: inline-block;
+      padding: 16px 37px;
+      transition: all 0.55s ease;
+      border-radius: 42px;
+      align-self: start;
+
+      border: 2px solid transparent;
+      cursor: pointer;
+      transition:
+        background-color 0.3s ease,
+        color 0.3s ease,
+        border-color 0.3s ease;
+    }
+
+    .submit {
+      background-color: var(--color-primary1);
+      display: inline-block;
+      padding: 16px 37px;
+      transition: all 0.55s ease;
+      border-radius: 42px;
+      background: var(--color-primary1);
+      color: var(--color-primary3);
+    }
+    label {
+      display: flex;
+      width: 382px;
+      padding: 24px 33px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 10px;
+      border-radius: 54px;
+      border: 1px solid #e3e3e3;
+      background: var(--color-secondary2);
+    }
+
+    input {
+      border-radius: 100px;
+      background: var(--color-secondary2);
+      padding: 18px;
+      z-index: 10;
+    }
+
+    #popup {
+      min-width: 750px;
+      padding: 40px 60px 60px 60px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 10px;
+      background: rgba(0, 0, 0, 0.5);
+      margin: auto;
+      border-radius: 29px;
+      &:popover-open {
+        display: flex;
+      }
+
+      h4 {
+        color: var(--color-secondary2);
+        text-align: center;
+        font-family: Cabin;
+        font-size: 45px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 116%; /* 52.2px */
+      }
     }
   }
 </style>
