--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -12,6 +12,7 @@ const { style, place } = Astro.props;
       align-self: start;
       justify-content: start;
       text-transform: uppercase;
+      margin-bottom: var(--space-xs);
     }
     .primary {
       background: var(--color-primary2);
