--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,174 +1,78 @@
 ---
 import Tag from "./Tag.astro";
+import PieChart from "./PieChart.astro";
 ---
 
 <section class="container">
-  <div class="del1">
+  <article>
     <div>
       <Tag style="tertiary">EXPERIENCE</Tag>
 
       <h2>More than 25 years of experience</h2>
       <p>3000+ our clients are insured around the World</p>
     </div>
-  </div>
-  <div class="del2">
-    <div class="circular_graphics">
-      <div class="pie">
-        <div class="parent" style="--percent: 85%">
-          <div class="child_rotate"></div>
-          <p class="center_pie_p">85%</p>
-        </div>
+    <div>
+      <div>
+        <PieChart percent="85%" percenttag="85%" />
         <h6>Consistency</h6>
       </div>
-      <div class="pie">
-        <div class="parent" style="--percent: 95%">
-          <div class="child_rotate"></div>
-          <p class="center_pie_p">95%</p>
-        </div>
+      <div>
+        <PieChart percent="95%" percenttag="95%" />
         <h6>Improvement</h6>
       </div>
-      <div class="pie">
-        <div class="parent" style="--percent: 90%">
-          <div class="child_rotate"></div>
-          <p class="center_pie_p">90%</p>
-        </div>
+      <div>
+        <PieChart percent="90%" percenttag="90%" />
         <h6>Branching</h6>
       </div>
     </div>
-  </div>
+  </article>
 </section>
 <style>
   @layer components {
     .container {
       grid-column: full;
       display: grid;
-      grid-template-columns: var(--layout-grid2);
-      grid-template-rows: var(--layout-rows2);
+      grid-template-columns: subgrid;
       background: var(--color-primary1);
-      color: var(--color-primary3);
-      padding: 5rem 0;
+      padding: var(--space-2xl) 0;
 
-      @media (width < 600px) {
-        display: block;
+      @media (max-width: 600px) {
+        padding: var(--space-m) 0;
       }
 
       > * {
-        grid-column: 2;
+        grid-column: content;
       }
-    }
 
-    .del1 {
-      display: grid;
-      grid-template-columns: subgrid;
-      align-items: center;
-      grid-column: 2 / 3;
-      grid-row: 1 / 3;
-      h2,
-      p {
-        /* width: 300px; */
-        margin-top: 1rem;
-      }
-      div {
-        display: flex;
-        flex-direction: column;
-      }
-    }
-    .del2 {
-      display: grid;
-      grid-template-columns: subgrid;
-      align-items: center;
-      grid-column: 3 / 3;
-
-      .circular_graphics {
+      article {
         display: flex;
         justify-content: space-between;
 
-        .pie {
-          p {
-            text-align: center;
-            padding-top: 15px;
-            font-weight: 700;
-          }
+        @media (max-width: 600px) {
+          flex-direction: column;
+        }
 
-          h6 {
-            text-align: center;
+        > div:first-of-type {
+          display: flex;
+          flex-direction: column;
+          @media (max-width: 600px) {
+           margin-bottom: var(--space-m);
+        }
+                    
+        }
+        > div ~ div {
+          display: flex;
+          justify-content: space-between;
+        
+         @media (min-width: 601px) {
+          gap: var(--space-s);
+        }
+          div {
+            display: grid;
+            justify-items: center;
           }
         }
       }
     }
   }
-
-  .parent {
-    --offset-pos: 5px;
-    border: var(--offset-pos) solid transparent;
-    background:
-      linear-gradient(#ffcc4a 0 0) padding-box,
-      conic-gradient(white var(--percent), rgb(189, 184, 184) 0) border-box;
-    position: relative;
-    aspect-ratio: 1;
-    width: 150px;
-    border-radius: 1e5px;
-    margin-inline: auto;
-
-    .child_rotate {
-      aspect-ratio: 1;
-      border-radius: 99px;
-      width: 20px;
-      background: black;
-      position: absolute;
-      offset-path: border-box;
-      offset-distance: var(--percent);
-      offset-anchor: 50% calc(50% - var(--offset-pos) / 2);
-    }
-    .center_pie_p {
-      margin-top: 2.5rem;
-    }
-  }
-
-  @property --percent {
-    syntax: "<percentage>";
-    inherits: true;
-    initial-value: 0%;
-  }
-
-  @keyframes --pie {
-    to {
-      --percent: 100%;
-    }
-  }
-
-  /* Media Query for devices with width below 900px */
-  /* @media (max-width: 900px) {
-    .container {
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem;
-    }
-
-    .yellow_section_text {
-      padding: 2rem;
-      text-align: center;
-
-      h2 {
-        width: auto;
-        margin-top: 1rem;
-      }
-    }
-
-    .circular_graphics {
-      padding: 2rem;
-      gap: 1.5rem;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .pie {
-      width: 100%;
-      max-width: 200px;
-    }
-
-    .parent {
-      width: 100%;
-    }
-  } */
 </style>
