--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -39,11 +39,9 @@
       justify-content: space-between;
       padding: 5rem;
       border-radius: 20px;
-
       overflow: clip;
       position: relative;
       isolation: isolate;
-
       margin: 4rem 0;
 
       &::before {
@@ -97,6 +95,10 @@
         background: var(--color-primary1);
         color: var(--color-primary3);
       }
+
+      h4 {
+        color: var(--color-secondary2);
+      }
     }
 
     .footer {
@@ -108,6 +110,10 @@
       justify-content: center;
       grid-template-columns: subgrid;
       padding: 2.875rem 0rem;
+
+      h5 {
+        color: var(--color-secondary2);
+      }
 
       div {
         grid-column: content;
