--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,7 +1,6 @@
 ---
 import { Image } from "astro:assets";
 import sarah from "../assets/images/sarah.jpg";
-
 import Button from "./Button.astro";
 
 import Card from "./Card.astro";
@@ -32,20 +31,28 @@ import Card from "./Card.astro";
       grid-template-rows: var(--layout-rows2);
       max-height: 90vh;
       overflow: hidden;
-
       .tekst-knap {
         grid-column: 1 / 3;
         grid-row: 1 / 3;
         display: grid;
         grid-template-columns: subgrid;
-        padding: 5rem 0;
-
         background: var(--color-primary3);
         color: var(--color-secondary2);
-
+        padding: var(--space-l);
+        @media (width < 600px) {
+          padding: 5rem 0;
+        }
         > div {
           grid-column: content;
           align-self: start;
+        }
+        h1 {
+          font-weight: 700;
+          margin-bottom: var(--space-s);
+          color: var(--color-secondary2);
+        }
+        p {
+          margin-bottom: var(--space-m);
         }
       }
       .billedet {
@@ -62,17 +69,12 @@ import Card from "./Card.astro";
         grid-column: 2 / -2;
         grid-row: 2 / 4;
         display: flex;
-        gap: 20px;
+        gap: var(--space-s);
         background: none;
         @media (width < 600px) {
           display: block;
         }
       }
-    }
-
-    h1 {
-      font-weight: var(--font-weight-700);
-      margin-bottom: 32px;
     }
   }
 </style>
