--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import ContactUs from "../components/ContactUs.astro";
 
   <Experience />
 
-  <CorevaluesSection data={corevalueData} background="black" buttonProps1={{ style: "secondary" }} buttonProps2={{ style: "primary" }} />
+  <CorevaluesSection data={corevalueData} background="black" buttonProps1={{ style: "tertiary" }} buttonProps2={{ style: "primary" }} />
 
   <ContactUs />
 </MainLayout>
