--- a/src/components/AndenSection.astro
+++ b/src/components/AndenSection.astro
@@ -28,41 +28,23 @@ const { h2, tekst, tagProps, li1, li2 } = Astro.props;
 <style>
   @layer components {
     .container {
-      /* grid-column: full;
+      grid-column: content;
       display: grid;
-      grid-template-columns: var(--layout-grid2);
-      grid-template-rows: var(--layout-rows2);
-      gap: var(--space-m);
-      color: var(--color-primary3);
-      padding: var(--space-2xl); */
-      /* padding: 5rem 0; */
-
-      /* grid-column: content;
-      display: grid;
-      gap: var(--space-m);
-      color: var(--color-primary3);
-      padding: var(--space-2xl) 0;
-      grid-template-columns: 1fr 1fr; */
-
-      grid-column: full;
-      display: grid;
-      grid-template-columns: var(--layout-grid2);
+      grid-template-columns: auto auto;
       grid-template-rows: var(--layout-rows3);
-      gap: var(--space-m);
       color: var(--color-primary3);
+      gap: var(--space-m);
       padding: var(--space-2xl) 0;
-
-      @media (width < 600px) {
-        display: block;
+      @media (max-width: 600px) {
         padding: var(--space-m) 0;
+        display: flex;
+        flex-direction: column;
       }
 
       .del1 {
-        grid-column: 2 / 3;
         grid-row: 2 / -1;
       }
       .del2 {
-        grid-column: 3;
         grid-row: 1 / 3;
 
         div {
