--- a/src/components/ContactUs.astro
+++ b/src/components/ContactUs.astro
@@ -15,9 +15,11 @@ import ContactInfo from "./ContactInfo.astro";
       <h2>Contact Us. It’s Easy.</h2>
       <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative.</p>
     </div>
-    <ContactInfo iconname="call-today" tekst="Call Today" h6="+1 800 100 900" />
-    <ContactInfo iconname="monday-friday" tekst="Monday To Friday" h6="9AM - 5PM" />
-    <ContactInfo iconname="adress-grey" tekst="USA Office" h6="195 Devonshire St Boston, MA 02110" />
+    <div>
+      <ContactInfo iconname="call-today" tekst="Call Today" h6="+1 800 100 900" />
+      <ContactInfo iconname="monday-friday" tekst="Monday To Friday" h6="9AM - 5PM" />
+      <ContactInfo iconname="adress-grey" tekst="USA Office" h6="195 Devonshire St Boston, MA 02110" />
+    </div>
   </div>
 
   <div class="del2">
@@ -36,52 +38,38 @@ import ContactInfo from "./ContactInfo.astro";
 <style>
   @layer components {
     .container {
-      grid-column: full;
+      grid-column: content;
       display: grid;
-      grid-template-columns: var(--layout-grid2);
-      grid-template-rows: var(--layout-rows2);
-
+      grid-template-columns: auto auto;
+      grid-template-rows: var(--layout-rows3);
       color: var(--color-primary3);
-      padding: 5rem 0;
+      gap: var(--space-m);
+      padding: var(--space-2xl) 0;
 
-      @media (width < 600px) {
-        display: block;
-      }
-
-      > * {
-        grid-column: 2;
-      }
-    }
-    .del1 {
-      display: grid;
-      grid-template-columns: subgrid;
-      align-items: center;
-      grid-column: 2 / 3;
-      grid-row: 1 / 3;
-      h2,
-      p {
-        /* width: 300px; */
-        margin-top: 1rem;
-      }
-      div {
+      @media (max-width: 600px) {
+        padding: var(--space-m) 0;
         display: flex;
         flex-direction: column;
       }
     }
-    .icons {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-
-      svg {
-        width: 52px;
+    .del1 {
+      grid-row: 1 / -1;
+      > div:first-child {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: var(--space-m-l);
+      }
+      > div:last-child {
+        display: flex;
+        flex-direction: column;
+        gap: var(--space-l-xl);
       }
     }
+
     .del2 {
       display: grid;
-      grid-template-columns: subgrid;
       align-items: center;
-      grid-column: 3 / 3;
+      grid-row: 2 / -1;
     }
     .billede-grid {
       display: grid;
