--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -7,12 +7,11 @@ import Card from "./Card.astro";
 ---
 
 <section class="container">
+  <article></article>
   <div class="tekst-knap">
-    <div>
-      <h1>Adam Buschemia Business Consultant</h1>
-      <p>Get help from Alex Moore, a professional business coach with advanced experience on growth and business scaling.</p>
-      <Button style="secondary" linket="#">Book a meeting</Button>
-    </div>
+    <h1>Adam Buschemia Business Consultant</h1>
+    <p>Get help from Alex Moore, a professional business coach with advanced experience on growth and business scaling.</p>
+    <Button style="secondary" linket="#">Book a meeting</Button>
   </div>
   <Image class="billedet" alt="" src={sarah} />
   <div class="cards">
@@ -29,23 +28,28 @@ import Card from "./Card.astro";
       display: grid;
       grid-template-columns: var(--layout-grid2);
       grid-template-rows: var(--layout-rows2);
-      max-height: 90vh;
       overflow: hidden;
-      .tekst-knap {
-        grid-column: 1 / 3;
-        grid-row: 1 / 3;
-        display: grid;
-        grid-template-columns: subgrid;
+      article {
         background: var(--color-primary3);
+        grid-column: full;
+        display: grid;
+        grid-area: 1 / 1 / 3 / -1;
+        grid-template-columns: subgrid;
+      }
+      .tekst-knap {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
         color: var(--color-secondary2);
-        padding: var(--space-l);
+        padding: var(--space-2xl) 0;
+        margin-right: var(--space-2xl);
         @media (width < 600px) {
-          padding: 5rem 0;
+          /* padding: var(--space-m) 0; */
+          grid-column: 2 / -1;
+          grid-row: 1 / 2;
+          margin-right: 0;
+          padding: var(--space-s);
         }
-        > div {
-          grid-column: content;
-          align-self: start;
-        }
+
         h1 {
           font-weight: 700;
           margin-bottom: var(--space-s);
@@ -55,25 +59,36 @@ import Card from "./Card.astro";
           margin-bottom: var(--space-m);
         }
       }
-      .billedet {
-        height: 100%;
-        object-fit: cover;
-      }
       img {
         grid-column: 3 / -1;
-        grid-row: 1 / -2;
-        border-radius: 0px;
-      }
+        grid-row: 1 / 4;
 
-      .cards {
-        grid-column: 2 / -2;
-        grid-row: 2 / 4;
-        display: flex;
-        gap: var(--space-s);
-        background: none;
+        border-radius: 0px;
+        max-height: 90vh;
+
         @media (width < 600px) {
-          display: block;
+          /* grid-column: 1 / -1;
+        grid-row: 2 / 2; */
+          display: none;
         }
+      }
+    }
+
+    .billedet {
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .cards {
+      grid-column: 2 / 4;
+      grid-row: 2 / 4;
+      display: flex;
+      gap: var(--space-s);
+      background: none;
+      @media (width < 600px) {
+        grid-column: 2 / -1;
+        flex-direction: column;
+        padding: var(--space-s);
       }
     }
   }
