footer og figur

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -66,6 +66,12 @@ import PieChart from "./PieChart.astro";
           @media (min-width: 601px) {
             gap: var(--space-s);
           }
+          @media (max-width: 600px) {
+            margin-bottom: var(--space-m);
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: var(--space-s);
+          }
           div {
             display: grid;
             justify-items: center;
