--- a/src/components/ScrollingContainer.astro
+++ b/src/components/ScrollingContainer.astro
@@ -39,23 +39,15 @@ import { Icon } from "astro-icon/components";
       grid-column: full;
       display: grid;
       grid-template-columns: var(--layout-grid2);
-      /* grid-template-rows: var(--layout-rows2); */
       grid-template-rows: auto auto;
-      /* row-gap: 4rem; */
       row-gap: var(--space-2xl);
-      /* padding: 5rem 0; */
       padding: var(--space-xl) 0;
 
       background: var(--color-secondary1);
       color: var(--color-primary3);
       @media (width < 600px) {
-        /* padding-inline: 1rem; */
         padding: var(--space-xs);
       }
-      /* > * {
-        grid-column: 2;
-      } */
-
       > ul {
         scroll-snap-type: x mandatory;
         grid-column: 1 / -1;
@@ -129,7 +121,6 @@ import { Icon } from "astro-icon/components";
 
     .full-width {
       display: flex;
-      /* gap: 1rem; */
       gap: var(--space-xs);
       overflow-x: auto;
       list-style: none;
@@ -144,13 +135,29 @@ import { Icon } from "astro-icon/components";
         padding: 2.75rem 2.1875rem;
         align-self: start;
         display: grid;
+        &:hover {
+          background: var(--color-primary3);
+          color: var(--color-secondary2);
+          h6 {
+            color: var(--color-secondary2);
+          }
+          .icon-card {
+            color: var(--color-primary1);
+          }
+        }
+
+        h6 {
+          transition: all 0.4s ease-in-out;
+        }
       }
       .icon-card {
         width: 40px;
         margin-bottom: var(--space-s);
-        img {
-          border-radius: 0px;
-        }
+        color: var(--color-primary3);
+        transition: all 0.4s ease-in-out;
+      }
+      img {
+        border-radius: 0px;
       }
     }
   }
