--- a/src/components/ScrollingContainer.astro
+++ b/src/components/ScrollingContainer.astro
@@ -77,16 +77,9 @@ import { Icon } from "astro-icon/components";
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
-        @media (width < 600px) {
-          flex-direction: column;
-          align-items: start;
-        }
 
         .text {
           max-width: 50%;
-          @media (width < 600px) {
-            max-width: none;
-          }
           .icon {
             width: 100px;
             margin-bottom: var(--space-xs);
@@ -94,10 +87,20 @@ import { Icon } from "astro-icon/components";
         }
         .buttons {
           display: flex;
-          /* gap: 20px; */
           gap: var(--space-s);
+        }
+      }
 
-          @media (width < 600px) {
+      @media (width < 600px) {
+        gap: 1rem;
+        .scrolling-top {
+          flex-direction: column;
+          gap: 1rem;
+          align-items: flex-start;
+          .text {
+            max-width: 100%;
+          }
+          .buttons {
             margin-top: var(--space-s);
           }
         }
@@ -135,6 +138,9 @@ import { Icon } from "astro-icon/components";
         padding: 2.75rem 2.1875rem;
         align-self: start;
         display: grid;
+        transition: all 0.4s ease-in-out;
+        cursor: pointer;
+
         &:hover {
           background: var(--color-primary3);
           color: var(--color-secondary2);
