--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -11,7 +11,7 @@ import Card from "./Card.astro";
   <div class="tekst-knap">
     <h1>Adam Buschemia Business Consultant</h1>
     <p>Get help from Alex Moore, a professional business coach with advanced experience on growth and business scaling.</p>
-    <Button style="secondary" linket="#">Book a meeting</Button>
+    <Button style="tertiary">Book a meeting</Button>
   </div>
   <Image class="billedet" alt="" src={sarah} />
   <div class="cards">
