done for nu måske

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -54,13 +54,6 @@ import Popover from "../components/Popover.astro";
       }
     }
 
-    /* nav {
-    display: inline-flex;
-    justify-content: center; 
-    align-items: center; 
-    gap: 30px; 
-  } */
-
     .menu {
       justify-content: center;
       align-items: center;
@@ -68,8 +61,6 @@ import Popover from "../components/Popover.astro";
       display: inline-flex;
       justify-content: flex-start;
       list-style: none;
-      /* margin: 0;
-    padding: 0; */
       flex-wrap: nowrap;
     }
 
@@ -93,7 +84,7 @@ import Popover from "../components/Popover.astro";
     }
 
     .menu a:hover {
-      /* color: var(--color_blue); */
+      color: var(--color-primary1);
     }
     hr {
       display: none;
